--- a/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -225,7 +225,6 @@
 		}
 	}
 
-	.form-builder-tabview,
 	.lfr-ddm-form-wizard {
 		border-bottom: 1px solid #DEE4E9;
 		padding: 20px 34px 11px 34px;
